# cp-sat-explorer

./: pyproject.toml
src/cp_sat_explorer/: __init__.py  model.py
