[project]
name = "cp-sat-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin Solorio", email = "103829+ksolo@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
cp-sat-explorer = "cp_sat_explorer:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
